tests/negative/neg_own_target_not_null.safe
-- Test: neg_own_target_not_null
-- Description: Moving into a target that is not provably null.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p97a:8d0214d5
-- Expected: REJECT move_target_not_null

package Move_Target_Not_Null_Test

   type Payload is record
      Value : Integer;


   type Payload_Ptr is access Payload;

   function Bad_Move
      Source : Payload_Ptr = new ((Value = 1) as Payload);
      Target : Payload_Ptr = new ((Value = 2) as Payload);

      Target = Source;  -- ERROR: target is not provably null



